# Terminal-Cube

./: CMakeLists.txt  Cube.cpp  CubeV0.cpp  LICENSE  README.md  color_cube_optimized_solver.cpp  cube.cpp  cube.h  main.cpp  math.cpp  math.h
